--- a/gradio_sms_text_classification.ipynb
+++ b/gradio_sms_text_classification.ipynb
@@ -2,21 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'gradio'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 13\u001b[0m\n\u001b[0;32m     10\u001b[0m pd\u001b[38;5;241m.\u001b[39mset_option(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmax_colwidth\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;241m200\u001b[39m)\n\u001b[0;32m     12\u001b[0m \u001b[38;5;66;03m# Import Gradio\u001b[39;00m\n\u001b[1;32m---> 13\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mgradio\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mgr\u001b[39;00m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'gradio'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import pandas\n",
     "import pandas as pd\n",
@@ -30,48 +18,12 @@
     "pd.set_option('max_colwidth', 200)\n",
     "\n",
     "# Import Gradio\n",
-    "import gradio as gr"
+    "import gradio as gr\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def sms_classification(sms_text_df):\n",
-    "    \"\"\"\n",
-    "    Perform SMS classification using a pipeline with TF-IDF vectorization and Linear Support Vector Classification.\n",
-    "\n",
-    "    Parameters:\n",
-    "    - sms_text_df (pd.DataFrame): DataFrame containing 'text_message' and 'label' columns for SMS classification.\n",
-    "\n",
-    "    Returns:\n",
-    "    - text_clf (Pipeline): Fitted pipeline model for SMS classification.\n",
-    "\n",
-    "    This function takes a DataFrame with 'text_message' and 'label' columns, splits the data into\n",
-    "    training and testing sets, builds a pipeline with TF-IDF vectorization and Linear Support Vector\n",
-    "    Classification, and fits the model to the training data. \n",
-    "    The fitted pipeline is returned to make future predictions.\n",
-    "    \"\"\"\n",
-    "    # Set the features variable to the text message column.\n",
-    "    \n",
-    "    # Set the target variable to the \"label\" column.\n",
-    "   \n",
-    "\n",
-    "    # Split data into training and testing and set the test_size = 33%\n",
-    "    \n",
-    "\n",
-    "    # Build a pipeline to transform the test set to compare to the training set.\n",
-    "    \n",
-    "\n",
-    "    # Fit the model to the transformed training data and return model.\n",
-    "    return "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -145,28 +97,77 @@
        "4                                                                                                Nah I don't think he goes to usf, he lives around here though  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Load the dataset into a DataFrame\n"
+    "# Load the dataset into a DataFrame\n",
+    "sms_text_df = pd.read_csv('Resources/SMSSpamCollection.csv')\n",
+    "sms_text_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Call the sms_classification function with the DataFrame and set the result to the \"text_clf\" variable\n",
-    "text_clf = "
+    "def sms_classification(sms_text_df):\n",
+    "    \"\"\"\n",
+    "    Perform SMS classification using a pipeline with TF-IDF vectorization and Linear Support Vector Classification.\n",
+    "\n",
+    "    Parameters:\n",
+    "    - sms_text_df (pd.DataFrame): DataFrame containing 'text_message' and 'label' columns for SMS classification.\n",
+    "\n",
+    "    Returns:\n",
+    "    - text_clf (Pipeline): Fitted pipeline model for SMS classification.\n",
+    "\n",
+    "    This function takes a DataFrame with 'text_message' and 'label' columns, splits the data into\n",
+    "    training and testing sets, builds a pipeline with TF-IDF vectorization and Linear Support Vector\n",
+    "    Classification, and fits the model to the training data. \n",
+    "    The fitted pipeline is returned to make future predictions.\n",
+    "    \"\"\"\n",
+    "    # Set the features variable to the text message column.\n",
+    "    X = sms_text_df[\"text_message\"]\n",
+    "    # Set the target variable to the \"label\" column.\n",
+    "    y = sms_text_df[\"label\"]\n",
+    "\n",
+    "    # Split data into training and testing and set the test_size = 33%\n",
+    "    X_train,X_test, y_train, y_test = train_test_split(X,y, test_size=0.33, random_state=42)\n",
+    "\n",
+    "    # Build a pipeline to transform the test set to compare to the training set.\n",
+    "    text_clf = Pipeline([('tfidf', TfidfVectorizer(stop_words='english')),\n",
+    "                         ('clf', LinearSVC()),\n",
+    "                        ])\n",
+    "\n",
+    "    # Fit the model to the transformed training data and return model.\n",
+    "    return text_clf.fit(X_train,y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Warre\\anaconda3\\Lib\\site-packages\\sklearn\\svm\\_classes.py:31: FutureWarning: The default value of `dual` will change from `True` to `'auto'` in 1.5. Set the value of `dual` explicitly to suppress the warning.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Call the sms_classification function with the DataFrame and set the result to the \"text_clf\" variable\n",
+    "text_clf = text_clf = sms_classification(sms_text_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,22 +188,27 @@
     "    classified as spam or not.\n",
     "    \"\"\"\n",
     "    # Create a variable that will hold the prediction of a new text.\n",
-    "    \n",
+    "    prediction = text_clf.predict([text])\n",
+    "                    \n",
     "    # Using a conditional if the prediction is \"ham\" return the message:\n",
     "    # f'The text message: \"{text}\", is not spam.' Else, return f'The text message: \"{text}\", is spam.'\n",
-    "    "
+    "    if prediction[0] == \"ham\":\n",
+    "        return f'The text message: \"{text}\", is not spam.'\n",
+    "    else:\n",
+    "        return f'The text message: \"{text}\", is spam.'\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running on local URL:  http://127.0.0.1:7860\n",
+      "* Running on local URL:  http://127.0.0.1:7861\n",
       "\n",
       "To create a public link, set `share=True` in `launch()`.\n"
      ]
@@ -210,7 +216,7 @@
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7860/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"http://127.0.0.1:7861/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -223,17 +229,29 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using existing dataset file at: .gradio\\flagged\\dataset1.csv\n"
+     ]
     }
    ],
    "source": [
     "# Create a sms_app that takes a textbox for the inputs and has a textbox for the output.  \n",
     "# Povide labels for each textbox. \n",
     "\n",
+    "sms_app = gr.Interface(\n",
+    "    fn=sms_prediction,\n",
+    "    inputs = [gr.Textbox(label=\"What is the text message you want to test?\")], \n",
+    "    outputs=gr.Textbox(lines=5, label=\"Our app has determined:\"))\n",
     "    \n",
-    "# Launch the app.\n"
+    "# Launch the app.\n",
+    "sms_app.launch(show_error=True)\n"
    ]
   },
   {
