--- a/sms_text_classification_solution.ipynb
+++ b/sms_text_classification_solution.ipynb
@@ -702,7 +702,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "dev",
    "language": "python",
    "name": "python3"
   },
@@ -716,7 +716,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
